Serialize animation in the right order

Per spec:
https://drafts.csswg.org/css-animations/#animation
The name of the animation should be the end of the value list, to
avoid ambiguity when serializing/deserializing the animation.

This CL fixes the problem for both element.style and the
window.getComputedStyle. A wpt test is added.

Since this CL changes the output of an existing web API, an Intent to
Ship has been sent to blink-dev and 3 LGTMs has been granted.
https://groups.google.com/a/chromium.org/forum/?utm_medium=email&utm_source=footer#!msg/blink-dev/KUelGRZP73Y/F4YxTGBOBwAJ

Bug: 772852
Change-Id: I88b06b57c68013d99c8c4fd4bd39bdfcf9b807fc
Reviewed-on: https://chromium-review.googlesource.com/c/1367935
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Xida Chen <xidachen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616639}
Former-commit-id: 66eb6c38f820a88d507d891208a164ae9bff516c